{
  "version": 4,
  "terraform_version": "0.14.9",
  "serial": 30,
  "lineage": "66224ea7-e2e0-b96f-c627-aabcaff3f208",
  "resources": [
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "azurerm_firewall_application_rule_collection",
      "name": "aksbasics",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": "Allow",
            "azure_firewall_name": "kubenetfw",
            "id": "/subscriptions/875759d2-f6a7-4864-a5f3-e230d6c6779c/resourceGroups/hub-rg/providers/Microsoft.Network/azureFirewalls/kubenetfw/applicationRuleCollections/aksbasics",
            "name": "aksbasics",
            "priority": 101,
            "resource_group_name": "hub-rg",
            "rule": [
              {
                "description": "",
                "fqdn_tags": null,
                "name": "allow network",
                "protocol": [
                  {
                    "port": 80,
                    "type": "Http"
                  },
                  {
                    "port": 443,
                    "type": "Https"
                  }
                ],
                "source_addresses": [
                  "*"
                ],
                "source_ip_groups": null,
                "target_fqdns": [
                  "*.cdn.mscr.io",
                  "*.data.mcr.microsoft.com",
                  "*.microsoftonline.com",
                  "*.monitoring.azure.com",
                  "*.oms.opinsights.azure.com",
                  "*.opinsights.azure.com",
                  "acs-mirror.azureedge.net",
                  "dc.services.visualstudio.com",
                  "login.microsoftonline.com",
                  "management.azure.com",
                  "mcr.microsoft.com"
                ]
              }
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.vnet",
            "module.firewall.azurerm_firewall.fw",
            "module.firewall.azurerm_public_ip.pip",
            "module.hub_network.azurerm_subnet.subnet",
            "module.hub_network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "azurerm_firewall_application_rule_collection",
      "name": "osupdates",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": "Allow",
            "azure_firewall_name": "kubenetfw",
            "id": "/subscriptions/875759d2-f6a7-4864-a5f3-e230d6c6779c/resourceGroups/hub-rg/providers/Microsoft.Network/azureFirewalls/kubenetfw/applicationRuleCollections/osupdates",
            "name": "osupdates",
            "priority": 102,
            "resource_group_name": "hub-rg",
            "rule": [
              {
                "description": "",
                "fqdn_tags": null,
                "name": "allow network",
                "protocol": [
                  {
                    "port": 80,
                    "type": "Http"
                  },
                  {
                    "port": 443,
                    "type": "Https"
                  }
                ],
                "source_addresses": [
                  "*"
                ],
                "source_ip_groups": null,
                "target_fqdns": [
                  "download.opensuse.org",
                  "ntp.ubuntu.com",
                  "packages.microsoft.com",
                  "security.ubuntu.com",
                  "snapcraft.io"
                ]
              }
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.vnet",
            "module.firewall.azurerm_firewall.fw",
            "module.firewall.azurerm_public_ip.pip",
            "module.hub_network.azurerm_subnet.subnet",
            "module.hub_network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "azurerm_firewall_application_rule_collection",
      "name": "publicimages",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": "Allow",
            "azure_firewall_name": "kubenetfw",
            "id": "/subscriptions/875759d2-f6a7-4864-a5f3-e230d6c6779c/resourceGroups/hub-rg/providers/Microsoft.Network/azureFirewalls/kubenetfw/applicationRuleCollections/publicimages",
            "name": "publicimages",
            "priority": 103,
            "resource_group_name": "hub-rg",
            "rule": [
              {
                "description": "",
                "fqdn_tags": null,
                "name": "allow network",
                "protocol": [
                  {
                    "port": 80,
                    "type": "Http"
                  },
                  {
                    "port": 443,
                    "type": "Https"
                  }
                ],
                "source_addresses": [
                  "*"
                ],
                "source_ip_groups": null,
                "target_fqdns": [
                  "auth.docker.io",
                  "production.cloudflare.docker.com",
                  "registry-1.docker.io"
                ]
              }
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.vnet",
            "module.firewall.azurerm_firewall.fw",
            "module.firewall.azurerm_public_ip.pip",
            "module.hub_network.azurerm_subnet.subnet",
            "module.hub_network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "azurerm_firewall_application_rule_collection",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": "Allow",
            "azure_firewall_name": "kubenetfw",
            "id": "/subscriptions/875759d2-f6a7-4864-a5f3-e230d6c6779c/resourceGroups/hub-rg/providers/Microsoft.Network/azureFirewalls/kubenetfw/applicationRuleCollections/test",
            "name": "test",
            "priority": 104,
            "resource_group_name": "hub-rg",
            "rule": [
              {
                "description": "",
                "fqdn_tags": null,
                "name": "allow network",
                "protocol": [
                  {
                    "port": 80,
                    "type": "Http"
                  },
                  {
                    "port": 443,
                    "type": "Https"
                  }
                ],
                "source_addresses": [
                  "*"
                ],
                "source_ip_groups": null,
                "target_fqdns": [
                  "*.bing.com"
                ]
              }
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.vnet",
            "module.firewall.azurerm_firewall.fw",
            "module.firewall.azurerm_public_ip.pip",
            "module.hub_network.azurerm_subnet.subnet",
            "module.hub_network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "azurerm_firewall_network_rule_collection",
      "name": "dns",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": "Allow",
            "azure_firewall_name": "kubenetfw",
            "id": "/subscriptions/875759d2-f6a7-4864-a5f3-e230d6c6779c/resourceGroups/hub-rg/providers/Microsoft.Network/azureFirewalls/kubenetfw/networkRuleCollections/dns",
            "name": "dns",
            "priority": 102,
            "resource_group_name": "hub-rg",
            "rule": [
              {
                "description": "aks node dns rule",
                "destination_addresses": [
                  "*"
                ],
                "destination_fqdns": [],
                "destination_ip_groups": [],
                "destination_ports": [
                  "53"
                ],
                "name": "allow network",
                "protocols": [
                  "UDP"
                ],
                "source_addresses": [
                  "*"
                ],
                "source_ip_groups": []
              }
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.vnet",
            "module.firewall.azurerm_firewall.fw",
            "module.firewall.azurerm_public_ip.pip",
            "module.hub_network.azurerm_subnet.subnet",
            "module.hub_network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "azurerm_firewall_network_rule_collection",
      "name": "servicetags",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": "Allow",
            "azure_firewall_name": "kubenetfw",
            "id": "/subscriptions/875759d2-f6a7-4864-a5f3-e230d6c6779c/resourceGroups/hub-rg/providers/Microsoft.Network/azureFirewalls/kubenetfw/networkRuleCollections/servicetags",
            "name": "servicetags",
            "priority": 110,
            "resource_group_name": "hub-rg",
            "rule": [
              {
                "description": "allow service tags",
                "destination_addresses": [
                  "AzureActiveDirectory",
                  "AzureContainerRegistry",
                  "MicrosoftContainerRegistry"
                ],
                "destination_fqdns": [],
                "destination_ip_groups": [],
                "destination_ports": [
                  "*"
                ],
                "name": "allow service tags",
                "protocols": [
                  "Any"
                ],
                "source_addresses": [
                  "*"
                ],
                "source_ip_groups": []
              }
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.vnet",
            "module.firewall.azurerm_firewall.fw",
            "module.firewall.azurerm_public_ip.pip",
            "module.hub_network.azurerm_subnet.subnet",
            "module.hub_network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "azurerm_firewall_network_rule_collection",
      "name": "time",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": "Allow",
            "azure_firewall_name": "kubenetfw",
            "id": "/subscriptions/875759d2-f6a7-4864-a5f3-e230d6c6779c/resourceGroups/hub-rg/providers/Microsoft.Network/azureFirewalls/kubenetfw/networkRuleCollections/time",
            "name": "time",
            "priority": 101,
            "resource_group_name": "hub-rg",
            "rule": [
              {
                "description": "aks node time sync rule",
                "destination_addresses": [
                  "*"
                ],
                "destination_fqdns": [],
                "destination_ip_groups": [],
                "destination_ports": [
                  "123"
                ],
                "name": "allow network",
                "protocols": [
                  "UDP"
                ],
                "source_addresses": [
                  "*"
                ],
                "source_ip_groups": []
              }
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.vnet",
            "module.firewall.azurerm_firewall.fw",
            "module.firewall.azurerm_public_ip.pip",
            "module.hub_network.azurerm_subnet.subnet",
            "module.hub_network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/875759d2-f6a7-4864-a5f3-e230d6c6779c/resourceGroups/hub-rg/providers/Microsoft.Network/publicIPAddresses/azureFirewalls-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.191.32.187",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "azureFirewalls-ip",
            "resource_group_name": "hub-rg",
            "sku": "Standard"
          },
          "dependencies": [
            "azurerm_resource_group.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.hub_network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "AzureFirewallSubnet",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/875759d2-f6a7-4864-a5f3-e230d6c6779c/resourceGroups/hub-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "resource_group_name": "hub-rg",
            "virtual_network_name": "hub-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.vnet",
            "module.hub_network.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "jumpbox-subnet",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "delegation": [
              {
                "name": "Microsoft.ContainerInstance/containerGroups",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/action"
                    ],
                    "name": "Microsoft.ContainerInstance/containerGroups"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/875759d2-f6a7-4864-a5f3-e230d6c6779c/resourceGroups/hub-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/jumpbox-subnet",
            "name": "jumpbox-subnet",
            "resource_group_name": "hub-rg",
            "service_endpoints": [
              "Microsoft.Storage"
            ],
            "virtual_network_name": "hub-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.vnet",
            "module.hub_network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.hub_network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/22"
            ],
            "guid": "2200ce31-3c68-4fcf-9865-dc7add73b5e7",
            "id": "/subscriptions/875759d2-f6a7-4864-a5f3-e230d6c6779c/resourceGroups/hub-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet",
            "location": "eastus",
            "name": "hub-vnet",
            "resource_group_name": "hub-rg",
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.kube_network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "aks-subnet",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.5.0/24",
            "address_prefixes": [
              "10.0.5.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/875759d2-f6a7-4864-a5f3-e230d6c6779c/resourceGroups/spoke1-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/aks-subnet",
            "name": "aks-subnet",
            "resource_group_name": "spoke1-rg",
            "virtual_network_name": "spoke1-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.kube",
            "module.kube_network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.kube_network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.4.0/22"
            ],
            "guid": "e0bbe97f-040d-4d25-878f-6f76350d4f9c",
            "id": "/subscriptions/875759d2-f6a7-4864-a5f3-e230d6c6779c/resourceGroups/spoke1-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet",
            "location": "eastus",
            "name": "spoke1-vnet",
            "resource_group_name": "spoke1-rg",
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.kube"
          ]
        }
      ]
    },
    {
      "module": "module.routetable",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/875759d2-f6a7-4864-a5f3-e230d6c6779c/resourceGroups/hub-rg/providers/Microsoft.Network/routeTables/kubenetfw_fw_rt",
            "location": "eastus",
            "name": "kubenetfw_fw_rt",
            "resource_group_name": "hub-rg",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "kubenetfw_fw_r",
                "next_hop_in_ip_address": "10.0.0.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.vnet",
            "module.firewall.azurerm_firewall.fw",
            "module.firewall.azurerm_public_ip.pip",
            "module.hub_network.azurerm_subnet.subnet",
            "module.hub_network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.routetable",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "aks_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/875759d2-f6a7-4864-a5f3-e230d6c6779c/resourceGroups/spoke1-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/aks-subnet",
            "route_table_id": "/subscriptions/875759d2-f6a7-4864-a5f3-e230d6c6779c/resourceGroups/hub-rg/providers/Microsoft.Network/routeTables/kubenetfw_fw_rt",
            "subnet_id": "/subscriptions/875759d2-f6a7-4864-a5f3-e230d6c6779c/resourceGroups/spoke1-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/aks-subnet"
          },
          "dependencies": [
            "azurerm_resource_group.kube",
            "azurerm_resource_group.vnet",
            "module.firewall.azurerm_firewall.fw",
            "module.firewall.azurerm_public_ip.pip",
            "module.hub_network.azurerm_subnet.subnet",
            "module.hub_network.azurerm_virtual_network.vnet",
            "module.kube_network.azurerm_subnet.subnet",
            "module.kube_network.azurerm_virtual_network.vnet",
            "module.routetable.azurerm_route_table.rt"
          ]
        }
      ]
    },
    {
      "module": "module.vnet_peering",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/875759d2-f6a7-4864-a5f3-e230d6c6779c/resourceGroups/hub-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/virtualNetworkPeerings/HubToSpoke1",
            "name": "HubToSpoke1",
            "remote_virtual_network_id": "/subscriptions/875759d2-f6a7-4864-a5f3-e230d6c6779c/resourceGroups/spoke1-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet",
            "resource_group_name": "hub-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "hub-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.kube",
            "azurerm_resource_group.vnet",
            "module.kube_network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet_peering",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peering-back",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/875759d2-f6a7-4864-a5f3-e230d6c6779c/resourceGroups/spoke1-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/virtualNetworkPeerings/Spoke1ToHub",
            "name": "Spoke1ToHub",
            "remote_virtual_network_id": "/subscriptions/875759d2-f6a7-4864-a5f3-e230d6c6779c/resourceGroups/hub-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet",
            "resource_group_name": "spoke1-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "spoke1-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.kube",
            "azurerm_resource_group.vnet",
            "module.hub_network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    }
  ]
}